--- a/styles/pages/homePage.module.css
+++ b/styles/pages/homePage.module.css
@@ -260,6 +260,6 @@
     @apply w-full;
 
     .communityCtas{
-        @apply flex gap-2 items-center; 
+        @apply flex gap-[2px] items-center; 
     }
 }
